pp5/y.output
Terminals unused in grammar

   T_Default
   T_Case
   T_Lower_Than_Else


State 182 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DecP

    2 DecP: DecP Declaration
    3     | Declaration

    4 Declaration: VariableDecl
    5            | InterfaceDecl
    6            | ClassDecl
    7            | FunctionDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 VarPC: VarPC ',' Variable
   11      | Variable

   12 Type: T_Int
   13     | T_Double
   14     | T_Bool
   15     | T_String
   16     | T_Identifier
   17     | Type T_Dims

   18 FunctionHead: Type T_Identifier '(' Formals ')'
   19             | T_Void T_Identifier '(' Formals ')'

   20 FunctionDecl: FunctionHead StmtBlock

   21 Formals: VarPC
   22        | %empty

   23 ClassDecl: T_Class T_Identifier Extends01 Implements01 '{' FieldA '}'

   24 Extends01: T_Extends T_Identifier
   25          | %empty

   26 Implements01: T_Implements IdentifierPC
   27             | %empty

   28 IdentifierPC: IdentifierPC ',' T_Identifier
   29             | T_Identifier

   30 FieldA: Field FieldA
   31       | %empty

   32 Field: VariableDecl
   33      | FunctionDecl

   34 InterfaceDecl: T_Interface T_Identifier '{' PrototypeA '}'

   35 PrototypeA: Prototype PrototypeA
   36           | %empty

   37 Prototype: Type T_Identifier '(' Formals ')' ';'
   38          | T_Void T_Identifier '(' Formals ')' ';'

   39 StmtBlock: '{' VariableDeclA StmtA '}'

   40 VariableDeclA: VariableDeclA VariableDecl
   41              | %empty

   42 StmtA: Stmt StmtA
   43      | %empty

   44 Stmt: Expr01 ';'
   45     | StmtBlock
   46     | IfStmt
   47     | WhileStmt
   48     | ForStmt
   49     | T_Break ';'
   50     | ReturnStmt
   51     | PrintStmt

   52 IfStmt: T_If '(' Expr ')' Stmt
   53       | T_If '(' Expr ')' Stmt T_Else Stmt

   54 WhileStmt: T_While '(' Expr ')' Stmt

   55 ForStmt: T_For '(' Expr01 ';' Expr ';' Expr01 ')' Stmt

   56 Expr01: Expr
   57       | %empty

   58 ReturnStmt: T_Return Expr01 ';'

   59 PrintStmt: T_Print '(' ExprPC ')' ';'

   60 ExprPC: ExprPC ',' Expr
   61       | Expr

   62 Expr: LValue '=' Expr
   63     | Constant
   64     | LValue
   65     | T_This
   66     | Call
   67     | '(' Expr ')'
   68     | Expr '+' Expr
   69     | Expr '-' Expr
   70     | Expr '*' Expr
   71     | Expr '/' Expr
   72     | Expr '%' Expr
   73     | '-' Expr
   74     | Expr '<' Expr
   75     | Expr T_LessEqual Expr
   76     | Expr '>' Expr
   77     | Expr T_GreaterEqual Expr
   78     | Expr T_Equal Expr
   79     | Expr T_NotEqual Expr
   80     | Expr T_And Expr
   81     | Expr T_Or Expr
   82     | '!' Expr
   83     | T_ReadInteger '(' ')'
   84     | T_ReadLine '(' ')'
   85     | T_New '(' T_Identifier ')'
   86     | T_NewArray '(' Expr ',' Type ')'

   87 LValue: T_Identifier
   88       | Expr '.' T_Identifier
   89       | Expr '[' Expr ']'

   90 Call: T_Identifier '(' Actuals ')'
   91     | Expr '.' T_Identifier '(' Actuals ')'

   92 Actuals: ExprPC
   93        | %empty

   94 Constant: T_IntConstant
   95         | T_DoubleConstant
   96         | T_BoolConstant
   97         | T_StringConstant
   98         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 82
'%' (37) 72
'(' (40) 18 19 37 38 52 53 54 55 59 67 83 84 85 86 90 91
')' (41) 18 19 37 38 52 53 54 55 59 67 83 84 85 86 90 91
'*' (42) 70
'+' (43) 68
',' (44) 10 28 60 86
'-' (45) 69 73
'.' (46) 88 91
'/' (47) 71
';' (59) 8 37 38 44 49 55 58 59
'<' (60) 74
'=' (61) 62
'>' (62) 76
'[' (91) 89
']' (93) 89
'{' (123) 23 34 39
'}' (125) 23 34 39
error (256)
T_Void (258) 19 38
T_Bool (259) 14
T_Int (260) 12
T_Double (261) 13
T_String (262) 15
T_Class (263) 23
T_LessEqual (264) 75
T_GreaterEqual (265) 77
T_Equal (266) 78
T_NotEqual (267) 79
T_Dims (268) 17
T_And (269) 80
T_Or (270) 81
T_Null (271) 98
T_Extends (272) 24
T_This (273) 65
T_Interface (274) 34
T_Implements (275) 26
T_While (276) 54
T_For (277) 55
T_If (278) 52 53
T_Else (279) 53
T_Return (280) 58
T_Break (281) 49
T_New (282) 85
T_NewArray (283) 86
T_Print (284) 59
T_ReadInteger (285) 83
T_ReadLine (286) 84
T_Default (287)
T_Case (288)
T_Identifier (289) 9 16 18 19 23 24 28 29 34 37 38 85 87 88 90 91
T_StringConstant (290) 97
T_IntConstant (291) 94
T_DoubleConstant (292) 95
T_BoolConstant (293) 96
T_UnaryMinus (294)
T_Lower_Than_Else (295)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 1, on right: 0
DecP (61)
    on left: 2 3, on right: 1 2
Declaration (62)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (63)
    on left: 8, on right: 4 32 40
Variable (64)
    on left: 9, on right: 8 10 11
VarPC (65)
    on left: 10 11, on right: 10 21
Type (66)
    on left: 12 13 14 15 16 17, on right: 9 17 18 37 86
FunctionHead (67)
    on left: 18 19, on right: 20
FunctionDecl (68)
    on left: 20, on right: 7 33
Formals (69)
    on left: 21 22, on right: 18 19 37 38
ClassDecl (70)
    on left: 23, on right: 6
Extends01 (71)
    on left: 24 25, on right: 23
Implements01 (72)
    on left: 26 27, on right: 23
IdentifierPC (73)
    on left: 28 29, on right: 26 28
FieldA (74)
    on left: 30 31, on right: 23 30
Field (75)
    on left: 32 33, on right: 30
InterfaceDecl (76)
    on left: 34, on right: 5
PrototypeA (77)
    on left: 35 36, on right: 34 35
Prototype (78)
    on left: 37 38, on right: 35
StmtBlock (79)
    on left: 39, on right: 20 45
VariableDeclA (80)
    on left: 40 41, on right: 39 40
StmtA (81)
    on left: 42 43, on right: 39 42
Stmt (82)
    on left: 44 45 46 47 48 49 50 51, on right: 42 52 53 54 55
IfStmt (83)
    on left: 52 53, on right: 46
WhileStmt (84)
    on left: 54, on right: 47
ForStmt (85)
    on left: 55, on right: 48
Expr01 (86)
    on left: 56 57, on right: 44 55 58
ReturnStmt (87)
    on left: 58, on right: 50
PrintStmt (88)
    on left: 59, on right: 51
ExprPC (89)
    on left: 60 61, on right: 59 60 92
Expr (90)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86, on right: 52 53 54 55 56 60 61 62 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82 86 88 89 91
LValue (91)
    on left: 87 88 89, on right: 62 64
Call (92)
    on left: 90 91, on right: 66
Actuals (93)
    on left: 92 93, on right: 90 91
Constant (94)
    on left: 94 95 96 97 98, on right: 63


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DecP           go to state 10
    Declaration    go to state 11
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    FunctionHead   go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 1

   19 FunctionHead: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


State 2

   14 Type: T_Bool .

    $default  reduce using rule 14 (Type)


State 3

   12 Type: T_Int .

    $default  reduce using rule 12 (Type)


State 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


State 5

   15 Type: T_String .

    $default  reduce using rule 15 (Type)


State 6

   23 ClassDecl: T_Class . T_Identifier Extends01 Implements01 '{' FieldA '}'

    T_Identifier  shift, and go to state 20


State 7

   34 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeA '}'

    T_Identifier  shift, and go to state 21


State 8

   16 Type: T_Identifier .

    $default  reduce using rule 16 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DecP .
    2 DecP: DecP . Declaration

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Declaration    go to state 23
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    FunctionHead   go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 11

    3 DecP: Declaration .

    $default  reduce using rule 3 (DecP)


State 12

    4 Declaration: VariableDecl .

    $default  reduce using rule 4 (Declaration)


State 13

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . T_Identifier
   17 Type: Type . T_Dims
   18 FunctionHead: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


State 15

   20 FunctionDecl: FunctionHead . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


State 16

    7 Declaration: FunctionDecl .

    $default  reduce using rule 7 (Declaration)


State 17

    6 Declaration: ClassDecl .

    $default  reduce using rule 6 (Declaration)


State 18

    5 Declaration: InterfaceDecl .

    $default  reduce using rule 5 (Declaration)


State 19

   19 FunctionHead: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


State 20

   23 ClassDecl: T_Class T_Identifier . Extends01 Implements01 '{' FieldA '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 25 (Extends01)

    Extends01  go to state 31


State 21

   34 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeA '}'

    '{'  shift, and go to state 32


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    2 DecP: DecP Declaration .

    $default  reduce using rule 2 (DecP)


State 24

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 25

   17 Type: Type T_Dims .

    $default  reduce using rule 17 (Type)


State 26

    9 Variable: Type T_Identifier .
   18 FunctionHead: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 9 (Variable)


State 27

   39 StmtBlock: '{' . VariableDeclA StmtA '}'

    $default  reduce using rule 41 (VariableDeclA)

    VariableDeclA  go to state 34


State 28

   20 FunctionDecl: FunctionHead StmtBlock .

    $default  reduce using rule 20 (FunctionDecl)


State 29

   19 FunctionHead: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable  go to state 35
    VarPC     go to state 36
    Type      go to state 37
    Formals   go to state 38


State 30

   24 Extends01: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


State 31

   23 ClassDecl: T_Class T_Identifier Extends01 . Implements01 '{' FieldA '}'

    T_Implements  shift, and go to state 40

    $default  reduce using rule 27 (Implements01)

    Implements01  go to state 41


State 32

   34 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeA '}'

    T_Void        shift, and go to state 42
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 36 (PrototypeA)

    Type        go to state 43
    PrototypeA  go to state 44
    Prototype   go to state 45


State 33

   18 FunctionHead: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable  go to state 35
    VarPC     go to state 36
    Type      go to state 37
    Formals   go to state 46


State 34

   39 StmtBlock: '{' VariableDeclA . StmtA '}'
   40 VariableDeclA: VariableDeclA . VariableDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_While           shift, and go to state 49
    T_For             shift, and go to state 50
    T_If              shift, and go to state 51
    T_Return          shift, and go to state 52
    T_Break           shift, and go to state 53
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_Print           shift, and go to state 56
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 59
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66
    '{'               shift, and go to state 27

    ';'       reduce using rule 57 (Expr01)
    $default  reduce using rule 43 (StmtA)

    VariableDecl  go to state 67
    Variable      go to state 13
    Type          go to state 37
    StmtBlock     go to state 68
    StmtA         go to state 69
    Stmt          go to state 70
    IfStmt        go to state 71
    WhileStmt     go to state 72
    ForStmt       go to state 73
    Expr01        go to state 74
    ReturnStmt    go to state 75
    PrintStmt     go to state 76
    Expr          go to state 77
    LValue        go to state 78
    Call          go to state 79
    Constant      go to state 80


State 35

   11 VarPC: Variable .

    $default  reduce using rule 11 (VarPC)


State 36

   10 VarPC: VarPC . ',' Variable
   21 Formals: VarPC .

    ','  shift, and go to state 81

    $default  reduce using rule 21 (Formals)


State 37

    9 Variable: Type . T_Identifier
   17 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 82


State 38

   19 FunctionHead: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 83


State 39

   24 Extends01: T_Extends T_Identifier .

    $default  reduce using rule 24 (Extends01)


State 40

   26 Implements01: T_Implements . IdentifierPC

    T_Identifier  shift, and go to state 84

    IdentifierPC  go to state 85


State 41

   23 ClassDecl: T_Class T_Identifier Extends01 Implements01 . '{' FieldA '}'

    '{'  shift, and go to state 86


State 42

   38 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 87


State 43

   17 Type: Type . T_Dims
   37 Prototype: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 88


State 44

   34 InterfaceDecl: T_Interface T_Identifier '{' PrototypeA . '}'

    '}'  shift, and go to state 89


State 45

   35 PrototypeA: Prototype . PrototypeA

    T_Void        shift, and go to state 42
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 36 (PrototypeA)

    Type        go to state 43
    PrototypeA  go to state 90
    Prototype   go to state 45


State 46

   18 FunctionHead: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 91


State 47

   98 Constant: T_Null .

    $default  reduce using rule 98 (Constant)


State 48

   65 Expr: T_This .

    $default  reduce using rule 65 (Expr)


State 49

   54 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 92


State 50

   55 ForStmt: T_For . '(' Expr01 ';' Expr ';' Expr01 ')' Stmt

    '('  shift, and go to state 93


State 51

   52 IfStmt: T_If . '(' Expr ')' Stmt
   53       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 94


State 52

   58 ReturnStmt: T_Return . Expr01 ';'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 57 (Expr01)

    Expr01    go to state 96
    Expr      go to state 77
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 53

   49 Stmt: T_Break . ';'

    ';'  shift, and go to state 97


State 54

   85 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 98


State 55

   86 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 99


State 56

   59 PrintStmt: T_Print . '(' ExprPC ')' ';'

    '('  shift, and go to state 100


State 57

   83 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 101


State 58

   84 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 102


State 59

   16 Type: T_Identifier .
   87 LValue: T_Identifier .
   90 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 103

    T_Dims        reduce using rule 16 (Type)
    T_Identifier  reduce using rule 16 (Type)
    $default      reduce using rule 87 (LValue)


State 60

   97 Constant: T_StringConstant .

    $default  reduce using rule 97 (Constant)


State 61

   94 Constant: T_IntConstant .

    $default  reduce using rule 94 (Constant)


State 62

   95 Constant: T_DoubleConstant .

    $default  reduce using rule 95 (Constant)


State 63

   96 Constant: T_BoolConstant .

    $default  reduce using rule 96 (Constant)


State 64

   73 Expr: '-' . Expr

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 104
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 65

   82 Expr: '!' . Expr

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 105
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 66

   67 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 106
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 67

   40 VariableDeclA: VariableDeclA VariableDecl .

    $default  reduce using rule 40 (VariableDeclA)


State 68

   45 Stmt: StmtBlock .

    $default  reduce using rule 45 (Stmt)


State 69

   39 StmtBlock: '{' VariableDeclA StmtA . '}'

    '}'  shift, and go to state 107


State 70

   42 StmtA: Stmt . StmtA

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_While           shift, and go to state 49
    T_For             shift, and go to state 50
    T_If              shift, and go to state 51
    T_Return          shift, and go to state 52
    T_Break           shift, and go to state 53
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_Print           shift, and go to state 56
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66
    '{'               shift, and go to state 27

    ';'       reduce using rule 57 (Expr01)
    $default  reduce using rule 43 (StmtA)

    StmtBlock   go to state 68
    StmtA       go to state 108
    Stmt        go to state 70
    IfStmt      go to state 71
    WhileStmt   go to state 72
    ForStmt     go to state 73
    Expr01      go to state 74
    ReturnStmt  go to state 75
    PrintStmt   go to state 76
    Expr        go to state 77
    LValue      go to state 78
    Call        go to state 79
    Constant    go to state 80


State 71

   46 Stmt: IfStmt .

    $default  reduce using rule 46 (Stmt)


State 72

   47 Stmt: WhileStmt .

    $default  reduce using rule 47 (Stmt)


State 73

   48 Stmt: ForStmt .

    $default  reduce using rule 48 (Stmt)


State 74

   44 Stmt: Expr01 . ';'

    ';'  shift, and go to state 109


State 75

   50 Stmt: ReturnStmt .

    $default  reduce using rule 50 (Stmt)


State 76

   51 Stmt: PrintStmt .

    $default  reduce using rule 51 (Stmt)


State 77

   56 Expr01: Expr .
   68 Expr: Expr . '+' Expr
   69     | Expr . '-' Expr
   70     | Expr . '*' Expr
   71     | Expr . '/' Expr
   72     | Expr . '%' Expr
   74     | Expr . '<' Expr
   75     | Expr . T_LessEqual Expr
   76     | Expr . '>' Expr
   77     | Expr . T_GreaterEqual Expr
   78     | Expr . T_Equal Expr
   79     | Expr . T_NotEqual Expr
   80     | Expr . T_And Expr
   81     | Expr . T_Or Expr
   88 LValue: Expr . '.' T_Identifier
   89       | Expr . '[' Expr ']'
   91 Call: Expr . '.' T_Identifier '(' Actuals ')'

    T_LessEqual     shift, and go to state 110
    T_GreaterEqual  shift, and go to state 111
    T_Equal         shift, and go to state 112
    T_NotEqual      shift, and go to state 113
    T_And           shift, and go to state 114
    T_Or            shift, and go to state 115
    '<'             shift, and go to state 116
    '>'             shift, and go to state 117
    '+'             shift, and go to state 118
    '-'             shift, and go to state 119
    '*'             shift, and go to state 120
    '/'             shift, and go to state 121
    '%'             shift, and go to state 122
    '.'             shift, and go to state 123
    '['             shift, and go to state 124

    $default  reduce using rule 56 (Expr01)


State 78

   62 Expr: LValue . '=' Expr
   64     | LValue .

    '='  shift, and go to state 125

    $default  reduce using rule 64 (Expr)


State 79

   66 Expr: Call .

    $default  reduce using rule 66 (Expr)


State 80

   63 Expr: Constant .

    $default  reduce using rule 63 (Expr)


State 81

   10 VarPC: VarPC ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 126
    Type      go to state 37


State 82

    9 Variable: Type T_Identifier .

    $default  reduce using rule 9 (Variable)


State 83

   19 FunctionHead: T_Void T_Identifier '(' Formals ')' .

    $default  reduce using rule 19 (FunctionHead)


State 84

   29 IdentifierPC: T_Identifier .

    $default  reduce using rule 29 (IdentifierPC)


State 85

   26 Implements01: T_Implements IdentifierPC .
   28 IdentifierPC: IdentifierPC . ',' T_Identifier

    ','  shift, and go to state 127

    $default  reduce using rule 26 (Implements01)


State 86

   23 ClassDecl: T_Class T_Identifier Extends01 Implements01 '{' . FieldA '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 31 (FieldA)

    VariableDecl  go to state 128
    Variable      go to state 13
    Type          go to state 14
    FunctionHead  go to state 15
    FunctionDecl  go to state 129
    FieldA        go to state 130
    Field         go to state 131


State 87

   38 Prototype: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 132


State 88

   37 Prototype: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 133


State 89

   34 InterfaceDecl: T_Interface T_Identifier '{' PrototypeA '}' .

    $default  reduce using rule 34 (InterfaceDecl)


State 90

   35 PrototypeA: Prototype PrototypeA .

    $default  reduce using rule 35 (PrototypeA)


State 91

   18 FunctionHead: Type T_Identifier '(' Formals ')' .

    $default  reduce using rule 18 (FunctionHead)


State 92

   54 WhileStmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 134
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 93

   55 ForStmt: T_For '(' . Expr01 ';' Expr ';' Expr01 ')' Stmt

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 57 (Expr01)

    Expr01    go to state 135
    Expr      go to state 77
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 94

   52 IfStmt: T_If '(' . Expr ')' Stmt
   53       | T_If '(' . Expr ')' Stmt T_Else Stmt

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 136
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 95

   87 LValue: T_Identifier .
   90 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 103

    $default  reduce using rule 87 (LValue)


State 96

   58 ReturnStmt: T_Return Expr01 . ';'

    ';'  shift, and go to state 137


State 97

   49 Stmt: T_Break ';' .

    $default  reduce using rule 49 (Stmt)


State 98

   85 Expr: T_New '(' . T_Identifier ')'

    T_Identifier  shift, and go to state 138


State 99

   86 Expr: T_NewArray '(' . Expr ',' Type ')'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    Expr      go to state 139
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 100

   59 PrintStmt: T_Print '(' . ExprPC ')' ';'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    ExprPC    go to state 140
    Expr      go to state 141
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 101

   83 Expr: T_ReadInteger '(' . ')'

    ')'  shift, and go to state 142


State 102

   84 Expr: T_ReadLine '(' . ')'

    ')'  shift, and go to state 143


State 103

   90 Call: T_Identifier '(' . Actuals ')'

    T_Null            shift, and go to state 47
    T_This            shift, and go to state 48
    T_New             shift, and go to state 54
    T_NewArray        shift, and go to state 55
    T_ReadInteger     shift, and go to state 57
    T_ReadLine        shift, and go to state 58
    T_Identifier      shift, and go to state 95
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 93 (Actuals)

    ExprPC    go to state 144
    Expr      go to state 141
    LValue    go to state 78
    Call      go to state 79
    Actuals   go to state 145
    Constant  go to state 80


State 104
